Implemented more console commands(start, stop and restart server). Implemented command history search with up and down arrow on server console. Extended logger class to improve efficiency on logging. New log format shows current time. Added metrics tabs to show some server metrics. Now shift+tab works for quick tab changes in reverse. Added gimmick songs to server console. Organized some parts of the server console code.